--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:26.1.0'
     //implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation "com.google.firebase:firebase-core:11.8.0"
     implementation 'com.firebaseui:firebase-ui-auth:3.1.3'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
+
