--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -29,8 +30,10 @@ dependencies {
     //implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation "com.google.firebase:firebase-core:11.8.0"
     implementation 'com.firebaseui:firebase-ui-auth:3.1.3'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
 }
 
 apply plugin: 'com.google.gms.google-services'
+
 
