--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29 // from 26 to 29 for AndroidX (needed for maps)
     defaultConfig {
         applicationId "com.example.saffin.androidsmartcity"
-        minSdkVersion 22
+        minSdkVersion 23 // From 22 to 23
         targetSdkVersion 29 // from 26 to 29
         versionCode 1
         versionName "1.0"
@@ -36,6 +36,9 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:3.1.3'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.libraries.places:places:2.2.0'
 
 }
 
