--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,15 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     // from 26 to 28 for AndroidX (needed for maps)
     //implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation "com.google.firebase:firebase-core:17.4.0"
+    implementation "com.google.firebase:firebase-core:17.4.1"
     implementation 'com.firebaseui:firebase-ui-auth:3.1.3'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.firebase:firebase-firestore:21.4.3'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.2.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
 
 }
 
