--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        resValue "string", "maps_api_key", (project.findProperty("MAPS_API_KEY") ?: "")
     }
     buildTypes {
         release {
@@ -44,6 +45,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'androidx.preference:preference:1.1.1'
 
 }
 
