--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        resValue "string", "maps_api_key", (project.findProperty("MAPS_API_KEY") ?: "")
     }
     buildTypes {
         release {
@@ -33,7 +34,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
     // from 26 to 28 for AndroidX (needed for maps)
     //implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation "com.google.firebase:firebase-core:17.4.1"
@@ -45,6 +45,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'pub.devrel:easypermissions:1.1.1'
 
 }
 
