--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.cardview:cardview:1.0.0"
     // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
     // from 26 to 28 for AndroidX (needed for maps)
@@ -30,20 +31,20 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     // from 26 to 28 for AndroidX (needed for maps)
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0'
     // from 26 to 28 for AndroidX (needed for maps)
     //implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation "com.google.firebase:firebase-core:17.4.1"
+    implementation "com.google.firebase:firebase-core:17.4.2"
     implementation 'com.firebaseui:firebase-ui-auth:3.1.3'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-database:19.3.0'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.google.android.libraries.places:places:2.2.0'
+    implementation 'com.google.android.libraries.places:places:2.3.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'androidx.preference:preference:1.1.1'
 
