--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resValue "string", "maps_api_key", (project.findProperty("MAPS_API_KEY") ?: "")
+        resValue "string", "weather_api_key", (project.findProperty("WEATHER_API_KEY") ?: "")
     }
     buildTypes {
         release {
