--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 MAPS_API_KEY="AIzaSyAh57hOyY4TI_RWCXS2OCpyKQqaMZLEJUM"
+WEATHER_API_KEY="84323b738643b433e324254dd732e7cd"
